# barter-rs

./: .gitignore  Cargo.toml
barter-arb-strategy/: Cargo.toml
barter-arb-strategy/examples/: run_engine.rs  stream_correlated_markets.rs
barter-arb-strategy/src/: config.rs  correlation.rs  database.rs  fees.rs  lib.rs  opportunity.rs  recorder.rs  risk.rs  state.rs  strategy.rs
barter-arb-strategy/tests/: integration.rs
barter-data/: Cargo.toml
barter-data/examples/: kalshi_mass_orderbook_stream.rs  kalshi_orderbook_stream.rs  kalshi_trade_stream.rs  kalshi_ws_raw.rs  polymarket_orderbook_stream.rs  polymarket_trade_stream.rs  polymarket_ws_raw.rs
barter-data/src/exchange/: mod.rs
barter-data/src/exchange/gateio/: channel.rs  market.rs
barter-data/src/exchange/kalshi/: auth.rs  channel.rs  market.rs  message.rs  mod.rs  subscriber.rs  subscription.rs  trade.rs
barter-data/src/exchange/kalshi/book/: l2.rs  mod.rs
barter-data/src/exchange/okx/: market.rs
barter-data/src/exchange/polymarket/: channel.rs  market.rs  message.rs  mod.rs  subscription.rs  trade.rs  transformer.rs
barter-data/src/subscription/: mod.rs
barter-execution/: Cargo.toml
barter-execution/examples/: test_ws_fills.rs
barter-execution/src/client/: mod.rs
barter-execution/src/client/kalshi/: http.rs  mod.rs  model.rs  ws.rs
barter-execution/src/client/polymarket/: http.rs  mod.rs  model.rs  signing.rs  ws.rs
barter-instrument/src/: exchange.rs
barter-instrument/src/instrument/market_data/: kind.rs
barter-integration/src/protocol/: websocket.rs
(+2 files in other folders)
